test/Fail/Issue7825.err
Issue7825.agda:20.5-8: error: [UnequalTypes]
The type
  Set₁
is not a subtype of
  P (λ r → IRRELEVANT)
when checking that the expression Set has type P (λ r → IRRELEVANT)
